--- a/front/package.json
+++ b/front/package.json
@@ -13,15 +13,18 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@loadable/component": "^5.15.2",
+    "@types/autosize": "^4.0.0",
     "@types/gravatar": "^1.8.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "autosize": "^5.0.1",
     "axios": "^0.21.4",
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
     "gravatar": "^1.8.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-mentions": "^4.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.1.0",
@@ -37,6 +40,7 @@
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^14.14.31",
+    "@types/react-mentions": "^4.1.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.0.3",
