--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.1.0",
+    "socket.io-client": "^4.4.1",
     "swr": "^1.1.1",
     "typescript": "^4.4.2"
   },
@@ -42,6 +43,7 @@
     "@types/node": "^14.14.31",
     "@types/react-mentions": "^4.1.5",
     "@types/react-router-dom": "^5.1.7",
+    "@types/socket.io-client": "^3.0.0",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.0.3",
     "babel-loader": "^8.2.2",
