--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^7.0.3",
     "gravatar": "^1.8.2",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-mentions": "^4.3.0",
     "react-router": "^5.2.0",
@@ -41,6 +42,7 @@
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^14.14.31",
+    "@types/react-custom-scrollbars": "^4.0.10",
     "@types/react-mentions": "^4.1.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/socket.io-client": "^3.0.0",
