--- a/front/package.json
+++ b/front/package.json
@@ -21,14 +21,16 @@
     "axios": "^0.21.4",
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.10.7",
     "gravatar": "^1.8.2",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
-    "react-mentions": "^4.3.0",
+    "react-mentions": "^4.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.1.0",
+    "regexify-string": "^1.0.17",
     "socket.io-client": "^4.4.1",
     "swr": "^1.1.1",
     "typescript": "^4.4.2"
